--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -43,7 +43,7 @@
                 <div id="card-errors" role="alert" class="mt-2 text-sm text-red-600 dark:text-red-400"></div>
             </div>
 
-         <%= render Shared::ButtonComponent.new(text: 'Subscribe', url: '', classes: 'w-full') %>
+         <%= render Shared::ButtonComponent.new(text: 'Subscribe2', url: '', classes: 'w-full', in_form: true) %>
 <% end %>
     </div>
 </div>
