Round numbers on top tweets

--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -51,19 +51,19 @@
                       <%= text_with_images(tweet_metric.tweet.text) %>
                   </td>
                   <td class="hidden md:table-cell p-1">
-                      <%= tweet_metric.retweet_count %>
+                      <%= rounded_number(tweet_metric.retweet_count) %>
                   </td>
                   <td class="hidden md:table-cell p-1">
-                      <%= tweet_metric.quote_count %>
+                      <%= rounded_number(tweet_metric.quote_count) %>
                   </td>
                   <td class="hidden md:hidden lg:table-cell p-1">
-                      <%= tweet_metric.like_count %>
+                      <%= rounded_number(tweet_metric.like_count) %>
                   </td>
                   <td class="hidden md:hidden lg:table-cell p-1">
-                      <%= tweet_metric.reply_count %>
+                      <%= rounded_number(tweet_metric.reply_count) %>
                   </td>
                   <td class="md:table-cell px-6 py-4">
-                      <%= tweet_metric.impression_count %>
+                      <%= rounded_number(tweet_metric.impression_count) %>
                   </td>
                  <td class="hidden md:table-cell px-6 py-4 relative">
                  <div class="engagement-rate-cell">
