--- a/app/components/shared/nav_bar_component.html.erb
+++ b/app/components/shared/nav_bar_component.html.erb
@@ -38,7 +38,7 @@
                     </div>
                     <% link_classes = 'block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white' %>
                     <ul class="py-1 font-light text-gray-500 dark:text-gray-400" aria-labelledby="userMenuDropdownButton">
-
+                        <li><%= link_to 'Two-Factor Authentication', two_factor_authentication_path, class: link_classes %></li>
                         <li><a href="<%= edit_user_settings_path %>" class="<%= link_classes %>">Settings</a></li>
                         <li><a href="<%= edit_email_subscription_path %>" class="<%= link_classes %>">Notifications</a></li>
                         <li><a href="<%= edit_user_registration_path %>" class="<%= link_classes %>">Profile</a></li>
