--- a/app/views/two_factor_authentications/show.html.erb
+++ b/app/views/two_factor_authentications/show.html.erb
@@ -5,10 +5,20 @@
 
     <% if current_user.otp_required_for_login %>
       <p class="text-gray-900 dark:text-white">Two-Factor Authentication is currently enabled.</p>
-      <%= button_to 'Disable Two-Factor Authentication', disable_two_factor_authentication_path, method: :post, class: 'btn btn-danger' %>
+      <%= render Shared::ButtonComponent.new(text: 'Disable Two-Factor Authentication', url: disable_two_factor_authentication_path, method: :post, classes: 'w-full') %>
     <% else %>
+
+      <p class="text-gray-900 dark:text-white">
+        To set up Two-Factor Authentication, download an authentication app such as
+        <%= link_to 'Authy', 'https://authy.com/', class: 'text-blue-500 hover:underline', target: '_blank', rel: 'noopener' %> or
+        <%= link_to 'Google Authenticator', 'https://support.google.com/accounts/answer/1066447', class: 'text-blue-500 hover:underline', target: '_blank', rel: 'noopener' %>.
+        These apps are available on the
+        <%= link_to 'Google Play Store', 'https://play.google.com/store', class: 'text-blue-500 hover:underline', target: '_blank', rel: 'noopener' %> and the
+        <%= link_to 'Apple App Store', 'https://www.apple.com/app-store/', class: 'text-blue-500 hover:underline', target: '_blank', rel: 'noopener' %>.
+      </p>
+
       <p class="text-gray-900 dark:text-white">Scan this QR code with your authentication app:</p>
-      <div class="mb-4">
+      <div>
         <img src="data:image/png;base64,<%= current_user.otp_qr_code %>" alt="QR Code">
       </div>
 
@@ -18,7 +28,7 @@
           <%= f.text_field :otp_code, class: 'mt-1 block w-full rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm dark:bg-gray-700 dark:text-gray-300' %>
         </div>
         <div>
-          <%= f.submit 'Enable Two-Factor Authentication', class: 'btn btn-primary' %>
+          <%= render Shared::ButtonComponent.new(text: 'Enable Two-Factor Authentication', url: '', classes: 'w-full', in_form: true) %>
         </div>
       <% end %>
     <% end %>
