Attempt to fix authy logo

--- a/app/views/two_factor_authentications/show.html.erb
+++ b/app/views/two_factor_authentications/show.html.erb
@@ -19,7 +19,7 @@
 
       <p class="text-gray-900 dark:text-white">Scan this QR code with your authentication app:</p>
       <div>
-        <img src="data:image/png;base64,<%= current_user.otp_qr_code %>" alt="QR Code">
+        <%= image_tag "data:image/png;base64,#{@qr_code}", alt: 'QR Code' %>
       </div>
 
       <%= form_with url: enable_two_factor_authentication_path, method: :post, local: true do |f| %>
