--- a/app/components/dashboard_component.html.erb
+++ b/app/components/dashboard_component.html.erb
@@ -42,6 +42,9 @@ Yep 1. is perfect
     <p class="paragraph-base">Your public page will start to show data after 1 day. It will look it's best after 14 days when we can compare this week to the previous one.</p>
     <p class="paragraph-base">Regardless of this you are welcome to take a look at your <%= link_to "public page", public_page_path(handle: current_user.handle) %> at any time.</p>
     </p>
+    <% if show_2fa_reminder? %>
+      <p class="paragraph-base">Remember to enable <%= link_to "two-factor authentication", two_factor_authentication_path %> on your Echosight account.</p>
+    <% end %>
   <% end %>
 <% end %>
 
@@ -63,10 +66,10 @@ Yep 1. is perfect
   <%= render ContentBoxComponent.new do %>
     <%= render Shared::HeadingComponent.new(text: 'Welcome to Echosight', heading_type: :h2) %>
     <p class="paragraph-base">You are connected to Twitter/X and we are collecting data from your account to generate your public page. Check out your <%= link_to "public page", public_page_path(current_user.handle) %>.</p>
-    <% if false %>
-      <% render Shared::HeadingComponent.new(text: 'Next steps', heading_type: :h4) %>
-      <p class="paragraph-base">Check out your <%= link_to "public page", public_page_path(current_user.handle) %>.</p>
+    <% if show_2fa_reminder? %>
+      <p class="paragraph-base">Remember to enable <%= link_to "two-factor authentication", two_factor_authentication_path %> on your Echosight account.</p>
     <% end %>
   <% end %>
 <% end %>
+
 </div>
