--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -1,14 +1,21 @@
+<%= render(Shared::ShareToolComponent.new(modal_id: 'default-modal', chart_id: 'followers-chart')) %>
+
 <!-- followers -->
-<div class="inline-block">
-  <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center">
-    Followers
-    <span class="ml-1">
-      <div data-tooltip-target="followers-tooltip">
-        <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-      </div>
-    </span>
+<div class="inline-block w-full">
+  <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center justify-between">
+    <div class="flex items-center">
+      Followers
+      <span class="ml-1">
+        <div data-tooltip-target="followers-tooltip">
+          <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </div>
+      </span>
+    </div>
+    <button data-modal-target="default-modal" data-chart-id="followers-chart" data-modal-toggle="default-modal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+      Share
+    </button>
   </h2>
 </div>
 
