Add copy button and improve title

--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -1,4 +1,4 @@
-<%= render(Shared::ShareToolComponent.new(modal_id: 'default-modal', chart_id: 'followers-chart')) %>
+<%= render(Shared::ShareToolComponent.new(modal_id: 'default-modal', chart_id: 'followers-chart', title: 'Share Followers Chart Image')) %>
 
 <!-- followers -->
 <div class="inline-block w-full">
