Add export button and disable followers toolbar

--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -44,15 +44,7 @@
             enabled: false,
           },
           toolbar: {
-            show: true, // Consider enabling toolbar for zooming and panning
-            tools: {
-              zoom: true,
-              zoomin: true,
-              zoomout: true,
-              pan: true,
-              reset: true,
-              download: false
-            },
+            show: false,
           },
         },
         fill: {
