--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -1,4 +1,4 @@
-<%= render(Shared::ShareToolComponent.new(modal_id: 'default-modal', chart_id: 'followers-chart', title: 'Share Followers Chart Image')) %>
+<%= render(Shared::ShareToolComponent.new(modal_id: 'share-followers-modal', chart_id: 'followers-chart', title: 'Share Followers Chart Image')) %>
 
 <!-- followers -->
 <div class="inline-block w-full">
@@ -13,7 +13,7 @@
         </div>
       </span>
     </div>
-    <button data-modal-target="default-modal" data-chart-id="followers-chart" data-modal-toggle="default-modal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+    <button data-modal-target="share-followers-modal" data-chart-id="followers-chart" data-modal-toggle="share-followers-modal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
       Share
     </button>
   </h2>
