--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -14,9 +14,11 @@
         </div>
       </span>
     </div>
-    <button data-modal-target="share-followers-modal" data-chart-id="followers-chart-container" data-modal-toggle="share-followers-modal" class="hide-from-share block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
-      Share
-    </button>
+     <% if admin_user_signed_in? %>
+      <button data-modal-target="share-followers-modal" data-chart-id="followers-chart-container" data-modal-toggle="share-followers-modal" class="hide-from-share block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+        Share
+      </button>
+      <% end %>
   </h2>
 
   <%= render Shared::TooltipComponent.new(id: "followers-tooltip", text: tooltip_text) %>
