--- a/app/views/public_pages/_followers_graph.html.erb
+++ b/app/views/public_pages/_followers_graph.html.erb
@@ -1,27 +1,37 @@
-<!-- followers -->
-<div class="inline-block">
-  <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center">
-    Followers
-    <span class="ml-1">
-      <div data-tooltip-target="followers-tooltip">
-        <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-      </div>
-    </span>
-  </h2>
-</div>
 
 <% tooltip_text = "We collect new follower counts each day if your graph isn't showing enough data yet, it's because we are waiting for more data to be available.".html_safe %>
 
-<%= render Shared::TooltipComponent.new(id: "followers-tooltip", text: tooltip_text) %>
+<!-- followers -->
+<div class="inline-block w-full dark:bg-gray-900" id="followers-chart-container">
+  <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center justify-between">
+    <div class="flex items-center">
+      <div class="graph-title-text tracking-wide"><%=page_user_name %>'s&nbsp;Followers</div>
+      <span class="ml-1 hide-from-share">
+        <div data-tooltip-target="followers-tooltip">
+          <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </div>
+      </span>
+    </div>
+      <button data-modal-target="share-followers-modal" data-chart-id="followers-chart-container" data-modal-toggle="share-followers-modal" class="hide-from-share block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+        Share
+      </button>
+  </h2>
 
-<div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
-  <% if follower_daily_data_points_for_graph.count < 2 %>
-   <p class="text-gray-700 dark:text-gray-300">We are awaiting more data to show the followers graph.</p>
-  <% else %>
-    <div id="followers-chart"></div>
-  <% end %>
+  <%= render Shared::TooltipComponent.new(id: "followers-tooltip", text: tooltip_text) %>
+  <%= render(Shared::ShareToolComponent.new(modal_id: 'share-followers-modal', chart_id: 'followers-chart-container', title: 'Share Followers Chart')) %>
+
+  <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
+    <% if follower_daily_data_points_for_graph.count < 2 %>
+      <p class="text-gray-700 dark:text-gray-300">We are awaiting more data to show the followers graph.</p>
+    <% else %>
+      <div id="followers-chart" class="w-full"></div>
+      <div class="flex justify-end mt-2">
+        <%= link_to 'echosight.io', root_url, class: 'text-yellow-800 text-xs font-medium px-2.5 py-0.5 rounded dark:text-yellow-300' %>
+      </div>
+    <% end %>
+  </div>
 </div>
 
 <script>
@@ -37,15 +47,7 @@
             enabled: false,
           },
           toolbar: {
-            show: true, // Consider enabling toolbar for zooming and panning
-            tools: {
-              zoom: true,
-              zoomin: true,
-              zoomout: true,
-              pan: true,
-              reset: true,
-              download: false
-            },
+            show: false,
           },
         },
         fill: {
@@ -108,3 +110,10 @@
     <% end %>
   });
 </script>
+
+<style>
+  .extra-padding {
+    padding-left: 20px; /* Adjust as needed */
+  }
+</style>
+
