--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -73,7 +73,7 @@
 
   <%= render partial:"public_pages/engagement_rate", locals: {page_user_name: page_user_name, engagement_rate_percentage_per_day: engagement_rate_percentage_per_day, maximum_days_of_data: maximum_days_of_data} %>
 
-  <%= render partial: "public_pages/top_posts", locals: {top_posts: top_posts, maximum_days_of_data: maximum_days_of_data} %>
+  <%= render partial: "public_pages/top_posts", locals: {page_user_name: page_user_name, top_posts: top_posts, maximum_days_of_data: maximum_days_of_data} %>
 
   <% unless current_user %>
   <section class="mt-2 bg-gray-100 dark:bg-gray-800 text-gray-800 dark:text-gray-200 py-8 px-4 sm:px-6 lg:px-8 rounded-xl w-full">
