--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -1,97 +1,26 @@
-<div class="inline-block">
-  <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center">
-    Top Posts
-    <span class="ml-1">
-      <div data-tooltip-target="top-posts-tooltip">
-        <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-      </div>
-    </span>
-  </h2>
-</div>
-
 <% tooltip_text = "We show the top posts from the last 7 days." %>
-<%= render Shared::TooltipComponent.new(id: "top-posts-tooltip", text: tooltip_text) %>
 
-<div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
-    <table class="w-full text-sm text-center text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-            <tr>
-                <th scope="col" class="p-0 md:table-cell md:p-1">
-                    Post
-                </th>
-                <th scope="col" class="hidden md:table-cell p-1">
-                    Retweets
-                </th>
-                <th scope="col" class="hidden md:table-cell p-1">
-                    Quotes
-                </th>
-                <th scope="col" class="hidden md:hidden lg:table-cell p-1">
-                    Likes
-                </th>
-                <th scope="col" class="hidden md:hidden lg:table-cell p-1">
-                    Replies
-                </th>
-                <th scope="col" class="md:table-cell p-1">
-                    Impressions
-                </th>
-                <th scope="col" class="hidden md:table-cell p-1">
-                    Engagement Rate
-                </th>
-                <th scope="col" class="hidden md:table-cell p-1">
-                    Actions
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-          <% top_posts.each do |tweet_metric| %>
-              <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                  <td class="p-0 md:table-cell md:p-1 font-medium text-gray-900 dark:text-white">
-                      <%= text_with_images(tweet_metric.tweet.text) %>
-                  </td>
-                  <td class="hidden md:table-cell p-1">
-                      <%= rounded_number(tweet_metric.retweet_count) %>
-                  </td>
-                  <td class="hidden md:table-cell p-1">
-                      <%= rounded_number(tweet_metric.quote_count) %>
-                  </td>
-                  <td class="hidden md:hidden lg:table-cell p-1">
-                      <%= rounded_number(tweet_metric.like_count) %>
-                  </td>
-                  <td class="hidden md:hidden lg:table-cell p-1">
-                      <%= rounded_number(tweet_metric.reply_count) %>
-                  </td>
-                  <td class="md:table-cell px-6 py-4">
-                      <%= rounded_number(tweet_metric.impression_count) %>
-                  </td>
-                 <td class="hidden md:table-cell px-6 py-4 relative">
-                 <div class="engagement-rate-cell">
-                  <%= tweet_metric.engagement_rate_percentage %>%
-                  <div data-tooltip-target="tooltip-engagement-<%= tweet_metric.tweet.id %>" class="ml-2">
-                    <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                    </svg>
-                  </div>
-                  </div>
-                </td>
-                  <td class="hidden md:table-cell px-6 py-4">
-                    <a href="https://twitter.com/user/status/<%= tweet_metric.tweet.id %>" target="_blank" class="text-blue-600 hover:text-blue-900">
-                      <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 18">
-                          <path d="M17 0h-5.768a1 1 0 1 0 0 2h3.354L8.4 8.182A1.003 1.003 0 1 0 9.818 9.6L16 3.414v3.354a1 1 0 0 0 2 0V1a1 1 0 0 0-1-1Z"></path>
-                          <path d="m14.258 7.985-3.025 3.025A3 3 0 1 1 6.99 6.768l3.026-3.026A3.01 3.01 0 0 1 8.411 2H2.167A2.169 2.169 0 0 0 0 4.167v11.666A2.169 2.169 0 0 0 2.167 18h11.666A2.169 2.169 0 0 0 16 15.833V9.589a3.011 3.011 0 0 1-1.742-1.604Z"></path>
-                      </svg>
-                    </a>
-                  </td>
-              </tr>
-          <% end %>
-      </tbody>
-    </table>
-    <% top_posts.each do |tweet_metric| %>
-      <% tooltip_text = "Engagement rate is calculated as (interactions / impressions) * 100. <br>For this tweet: (#{tweet_metric.retweet_count || 0} + #{tweet_metric.quote_count || 0} + #{tweet_metric.like_count || 0} + #{tweet_metric.reply_count || 0} + #{tweet_metric.bookmark_count || 0}) / #{tweet_metric.impression_count || 0} * 100 = #{tweet_metric.engagement_rate_percentage}".html_safe %>
+<div class="inline-block w-full dark:bg-gray-900" id="top-posts-container">
+  <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center justify-between">
+    <div class="flex items-center">
+      <div class="graph-title-text tracking-wide"><%=page_user_name %>'s&nbsp;Top Posts</div>
+      <span class="ml-1 hide-from-share">
+        <div data-tooltip-target="top-posts-tooltip">
+          <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+        </div>
+      </span>
+    </div>
+      <button data-modal-target="share-top-posts-modal" data-chart-id="top-posts-container" data-modal-toggle="share-top-posts-modal" class="hide-from-share block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+        Share
+      </button>
+  </h2>
 
-      <%= render Shared::TooltipComponent.new(id: "tooltip-engagement-#{tweet_metric.tweet.id}", text: tooltip_text) %>
-    <% end %>
+  <%= render Shared::TooltipComponent.new(id: "top-posts-tooltip", text: tooltip_text) %>
+  <%= render(Shared::ShareToolComponent.new(modal_id: 'share-top-posts-modal', chart_id: 'top-posts-container', title: 'Share Posts Table')) %>
 
-
+  <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6 mt-4">
+    <%= render PostsTableComponent.new(posts: top_posts, rows_to_show: 5) %>
+  </div>
 </div>
