--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,7 +10,9 @@
       </div>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div class="mb-4">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <div class="p-4 mb-4 text-sm text-yellow-800 rounded-lg bg-yellow-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+          Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+        </div>
       <% end %>
 
       <% if resource.identity.nil? || resource.identity.provider != 'twitter' %>
