--- a/app/views/public_pages/_top_posts.html.erb
+++ b/app/views/public_pages/_top_posts.html.erb
@@ -3,7 +3,7 @@
 <div class="inline-block w-full dark:bg-gray-900" id="top-posts-container">
   <h2 class="mt-4 text-2xl font-bold text-gray-900 dark:text-white flex items-center justify-between">
     <div class="flex items-center">
-      <div class="graph-title-text tracking-wide"><%=page_user_name %>'s&nbsp;Top Posts</div>
+      <div class="graph-title-text tracking-wide">Top Posts</div>
       <span class="ml-1 hide-from-share">
         <div data-tooltip-target="top-posts-tooltip">
           <svg class="w-4 h-4 text-gray-400 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
