--- a/app/views/feature_requests/index.html.erb
+++ b/app/views/feature_requests/index.html.erb
@@ -1,15 +1,40 @@
-<!-- app/views/feature_requests/index.html.erb -->
-<%= form_with(model: @new_feature_request, local: true) do |form| %>
-  <%= form.text_area :description, placeholder: 'Enter feature request' %>
-  <%= form.submit 'Submit' %>
-<% end %>
+<div class="flex flex-col items-center px-6 pt-8 mx-auto lg:mt-0 mb-5 dark:bg-gray-900">
+  <div class="w-full max-w-xl p-6 space-y-8 sm:p-8 bg-white rounded-lg shadow dark:bg-gray-800">
+    <h2 class="text-2xl font-bold text-gray-900 dark:text-white">Feature Requests</h2>
 
-<ul>
-  <% @feature_requests.each do |feature_request| %>
-    <li>
-      <%= feature_request.description %>
-      <%= link_to 'Upvote', votes_path(votable_type: 'FeatureRequest', votable_id: feature_request.id), method: :post %>
-      (Votes: <%= feature_request.votes.count %>)
-    </li>
+    <!-- app/views/feature_requests/index.html.erb -->
+    <%= form_with(model: @new_feature_request, local: true) do |form| %>
+      <div class="mb-4">
+        <%= form.label :title, class: 'block text-gray-700 dark:text-gray-300' %>
+        <%= form.text_field :title, class: 'w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white', placeholder: 'Enter feature title' %>
+      </div>
+      <div class="mb-4">
+        <%= form.label :description, class: 'block text-gray-700 dark:text-gray-300' %>
+        <%= form.text_area :description, class: 'w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-white', placeholder: 'Enter feature description' %>
+      </div>
+      <%= form.submit 'Submit', class: 'px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700' %>
+    <% end %>
+  </div>
+</div>
+
+<div id="accordion-collapse" data-accordion="collapse">
+  <% @feature_requests.each_with_index do |feature_request, index| %>
+    <h2 id="accordion-collapse-heading-<%= index %>">
+      <button type="button" class="flex items-center justify-between w-full p-5 font-medium text-gray-500 border border-b-0 border-gray-200 rounded-t-xl focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800" data-accordion-target="#accordion-collapse-body-<%= index %>" aria-expanded="false" aria-controls="accordion-collapse-body-<%= index %>">
+        <span><%= feature_request.title %></span>
+        <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+        </svg>
+      </button>
+    </h2>
+    <div id="accordion-collapse-body-<%= index %>" class="hidden" aria-labelledby="accordion-collapse-heading-<%= index %>">
+      <div class="p-5 border border-b-0 border-gray-200 dark:border-gray-700 dark:bg-gray-900">
+        <p class="mb-2 text-gray-500 dark:text-gray-400"><%= feature_request.description %></p>
+        <p class="text-gray-500 dark:text-gray-400">
+          <%= link_to 'Upvote', votes_path(votable_type: 'FeatureRequest', votable_id: feature_request.id), method: :post %>
+          (Votes: <%= feature_request.votes.count %>)
+        </p>
+      </div>
+    </div>
   <% end %>
-</ul>
+</div>
