--- a/app/views/subscriptions/show.html.erb
+++ b/app/views/subscriptions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="max-w-4xl mx-auto py-8 px-4">
-  <h1 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Your Subscription Details</h1>
+  <%= render Shared::HeadingComponent.new(text: 'Your Subscription Details', heading_type: :h1) %>
   <% if @subscription.present? %>
     <div class="bg-white dark:bg-gray-800 shadow overflow-hidden sm:rounded-lg">
       <div class="px-4 py-5 sm:px-6">
