--- a/app/views/feature_requests/index.html.erb
+++ b/app/views/feature_requests/index.html.erb
@@ -11,7 +11,8 @@ Check out the feature requests below and upvote your favorites. If you have a fe
         <span><%= feature_request.title %></span>
         <div class="flex items-center space-x-2">
           <%= link_to 'Upvote', votes_path(votable_type: 'FeatureRequest', votable_id: feature_request.id), method: :post, remote: true, class: 'text-blue-500 hover:underline', data: { action: 'vote#vote' } %>
-          <span data-vote-target="count" class="text-sm text-gray-500 dark:text-gray-400">(<%= feature_request.votes.count %>)</span>
+          <span data-vote-target="count"  class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"><%= feature_request.votes.count %></span>
+
           <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
           </svg>
