Fix footer contact us, icons and testimonial

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,9 +7,13 @@
         <li>
             <a href="https://www.echosight.io/privacypolicy" class="hover:underline me-4 md:me-6">Privacy Policy</a>
         </li>
-        <li>
+        <%
+=begin%>
+ <li>
             <a href="#" id="contact-link" class="hover:underline">Contact</a>
         </li>
+<%
+=end%>
         <li>
             <div class="flex sm:justify-center sm:mt-0">
               <a href="https://x.com/EchosightApp" target="_blank" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
