--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -16,7 +16,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
       <div class="text-center">
         <div class="bg-blue-900 text-white p-4 rounded-full mx-auto mb-4 w-16 h-16 flex items-center justify-center">
-          <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 15v4m6-6v6m6-4v4m6-6v6M3 11l6-5 6 5 5.5-5.5"/>
         </svg>
         </div>
@@ -25,7 +25,7 @@
       </div>
       <div class="text-center">
         <div class="bg-blue-900 text-white p-4 rounded-full mx-auto mb-4 w-16 h-16 flex items-center justify-center">
-          <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+          <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
   <path fill-rule="evenodd" d="M8.64 4.737A7.97 7.97 0 0 1 12 4a7.997 7.997 0 0 1 6.933 4.006h-.738c-.65 0-1.177.25-1.177.9 0 .33 0 2.04-2.026 2.008-1.972 0-1.972-1.732-1.972-2.008 0-1.429-.787-1.65-1.752-1.923-.374-.105-.774-.218-1.166-.411-1.004-.497-1.347-1.183-1.461-1.835ZM6 4a10.06 10.06 0 0 0-2.812 3.27A9.956 9.956 0 0 0 2 12c0 5.289 4.106 9.619 9.304 9.976l.054.004a10.12 10.12 0 0 0 1.155.007h.002a10.024 10.024 0 0 0 1.5-.19 9.925 9.925 0 0 0 2.259-.754 10.041 10.041 0 0 0 4.987-5.263A9.917 9.917 0 0 0 22 12a10.025 10.025 0 0 0-.315-2.5A10.001 10.001 0 0 0 12 2a9.964 9.964 0 0 0-6 2Zm13.372 11.113a2.575 2.575 0 0 0-.75-.112h-.217A3.405 3.405 0 0 0 15 18.405v1.014a8.027 8.027 0 0 0 4.372-4.307ZM12.114 20H12A8 8 0 0 1 5.1 7.95c.95.541 1.421 1.537 1.835 2.415.209.441.403.853.637 1.162.54.712 1.063 1.019 1.591 1.328.52.305 1.047.613 1.6 1.316 1.44 1.825 1.419 4.366 1.35 5.828Z" clip-rule="evenodd"/>
 </svg>
 
@@ -35,7 +35,7 @@
       </div>
       <div class="text-center">
         <div class="bg-blue-900 text-white p-4 rounded-full mx-auto mb-4 w-16 h-16 flex items-center justify-center">
-          <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+          <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
   <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M4.5 17H4a1 1 0 0 1-1-1 3 3 0 0 1 3-3h1m0-3.05A2.5 2.5 0 1 1 9 5.5M19.5 17h.5a1 1 0 0 0 1-1 3 3 0 0 0-3-3h-1m0-3.05a2.5 2.5 0 1 0-2-4.45m.5 13.5h-7a1 1 0 0 1-1-1 3 3 0 0 1 3-3h3a3 3 0 0 1 3 3 1 1 0 0 1-1 1Zm-1-9.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z"/>
 </svg>
 
@@ -45,7 +45,7 @@
       </div>
       <div class="text-center">
         <div class="bg-blue-900 text-white p-4 rounded-full mx-auto mb-4 w-16 h-16 flex items-center justify-center">
-          <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+          <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
   <path fill-rule="evenodd" d="M11 4.717c-2.286-.58-4.16-.756-7.045-.71A1.99 1.99 0 0 0 2 6v11c0 1.133.934 2.022 2.044 2.007 2.759-.038 4.5.16 6.956.791V4.717Zm2 15.081c2.456-.631 4.198-.829 6.956-.791A2.013 2.013 0 0 0 22 16.999V6a1.99 1.99 0 0 0-1.955-1.993c-2.885-.046-4.76.13-7.045.71v15.081Z" clip-rule="evenodd"/>
 </svg>
         </div>
@@ -64,8 +64,8 @@
       </div>
     </div>
     <div class="text-center mb-8">
-      <p class="text-xl italic text-gray-900 dark:text-gray-300">"Echosight has revolutionized the way I understand my social media performance!"</p>
-      <p class="text-lg font-bold mt-2 text-gray-900 dark:text-gray-300">- Satisfied User</p>
+      <p class="text-xl italic text-gray-900 dark:text-gray-300">"Thanks, <%= link_to('@loftwah', "https://x.com/loftwah", target: :_blank) %>, for giving me the early access. Really love this service..."</p>
+      <p class="text-lg font-bold mt-2 text-gray-900 dark:text-gray-300">- <%= link_to('@TimoCodes', "https://x.com/TimoCodes/status/1795403171399119042", target: :_blank) %></p>
     </div>
 
     <h2 class="text-3xl font-bold text-center text-gray-900 dark:text-gray-300 mb-8">Leaderboard</h2>
