Style date selector

--- a/app/components/public_page_component.html.erb
+++ b/app/components/public_page_component.html.erb
@@ -58,7 +58,7 @@
   </div>
 
   <div class="flex justify-center items-center">
-    <%= render Shared::DateRangeSelector.new(page_user_handle: page_user_handle) %>
+    <%= render Shared::DateRangeSelector.new(page_user_handle: page_user_handle, date_range: params[:date_range]) %>
   </div>
 
 
