--- a/app/views/public_pages/_impressions_over_time.html.erb
+++ b/app/views/public_pages/_impressions_over_time.html.erb
@@ -49,7 +49,7 @@
     let options = {
       chart: {
         height: '400px',
-        type: 'bar',
+        type: 'area',
         fontFamily: 'Inter, sans-serif',
         toolbar: {
           show: false
